syntax = "proto3";

import "com/example/internal/commonmodels/device/device.proto";
import "com/example/internal/commonmodels/error.proto";

option java_multiple_files = true;
option java_package = "com.example.internal.input.reqreply.device.get_by_id.proto";

message GetDeviceByIdRequest {
  string id = 1;
}

message GetDeviceByIdResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    Device device = 1;
  }

  message Failure {
    string message = 100;
    oneof error {
      Error device_not_found = 1;
    }
  }
}
